refactor(acceptance): 자주 사용하는 로직 fixture로 분리